<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Persistencia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_preferences">Settings preferencias</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="autorefresh">Autorefresh:</string>
    <string name="interval">Interval:</string>
    <string name="intervalo">Intervalo:</string>
    <string name="on_off">Off</string>
    <string name="default_interval">5</string>

    <string-array name="intervalos">
        <item>5 min</item>
        <item>15 min</item>
        <item>30 min</item>
    </string-array>
    
    <string-array name="intervalosValues">
        <item>5</item>
        <item>15</item>
        <item>30</item>
    </string-array>

    <string name="title_activity_preferences">PreferencesActivity</string>
    
    <string name="keyRefresh">autorefres</string>
    <string name="keyInterval">interval</string>
    <string name="keyMagnitud">magnitud</string>
    
    <string name="sumRefresh">Se indica si se quiere refrescar la iformación</string>
    <string name="sumInterval">Se indica cada cuanto tiempo se quiere refrescar la iformación</string>
    <string name="sumMagnitud">Se indica el filtro de la magnitud de los terremotos</string>
    
    <string name="magnitud">Magnitud</string>
    <string-array name="magnitudes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    
    <string name="prefWifi">Preferencias de WIFI</string>
    <string name="magnitude">Magnitud:</string>
    <string name="default_magnitud">1</string>

</resources>