<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iraitzcompains.persistencia.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/txtAutorefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="78dp"
        android:text="@string/autorefresh" />

    <TextView
        android:id="@+id/txtOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtAutorefresh"
        android:layout_marginLeft="54dp"
        android:layout_toRightOf="@id/txtAutorefresh"
        android:text="@string/on_off" />

    <TextView
        android:id="@+id/txtIntervalo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtAutorefresh"
        android:layout_below="@id/txtAutorefresh"
        android:layout_marginTop="31dp"
        android:text="@string/intervalo" />

    <TextView
        android:id="@+id/txtIntervalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtIntervalo"
        android:layout_alignBottom="@+id/txtIntervalo"
        android:layout_alignLeft="@+id/txtOnOff"
        android:text="@string/default_interval" />

</RelativeLayout>